2006-05-23  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: Mouse wheel events are ignored

2006-04-23  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: Layout View keeps track of the window
	geometry (same as gnome-keyboard-properties "Add Layout" dialog)

2006-04-08  cyphra  <serrador@cvs.gnome.org>

	* help/es/es.po: Updated Spanish translation

2006-04-01 Joachim Noreiko <jnoreiko@yahoo.com>

	* help/C/gswitchit.xml: updated info on keyboard shortcut
	for switching group, closes #335940
	added info about how to add layouts, closes #141332
	removed section 'Customizing Behavior', obsolete, closes #336405
	updated ids in links to User Guide, reworded 'keyboard preferences'
	
2006-03-29  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: add help to the layout view

2006-03-29 Joachim Noreiko <jnoreiko@yahoo.com>

	* help/C/gswitchit.xml: added new section on Layout View

2006-03-26  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: make applet export dynamic symbols,
	so plugins would work. Thanks to Sebastien Bacher for help.

2006-03-21  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: bad crash on exit fixed
	(confirmed by Ondrej Novy), closed #328002
	
2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: small update

2006-01-11  Sergey Udaltsov <svu@gnome.org>

	* GNOME_KeyboardApplet.server.in.in: removed "GNOME ", 
	HIG violation fixed, closed #326549

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: small update, by Christophe Bliard
	<christophe.bliard@trux.info>

2005-12-06  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: update for plugins

2005-12-03  Vincent Untz  <vuntz@gnome.org>

	* help/fr/*: small update, by Christophe Bliard
	<christophe.bliard@trux.info>
	* help/*: give some .cvsignore love

2005-10-06  Vincent Untz  <vuntz@gnome.org>

	* help/fr/fr.po: small update.

2005-09-11  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: small polish, improvement for plugins
