@@ -1,3 +1,8 @@
+2006-05-27  Sergey Udaltsov <svu@gnome.org>
+
+	* gswitchit-applet.c, gswitchit-plugin.c: Better UTF-8 description
+	handling, changed GSList to NULL-terminated gchar **
+
 2006-05-23  Sergey Udaltsov <svu@gnome.org>
 
 	* gswitchit-applet.c: Mouse wheel events are ignored
